# tipb

./: generate-cpp.sh
cpp/: CMakeLists.txt
go-binlog/: binlog.pb.go  cistern.pb.go  pump.pb.go
go-tipb/: analyze.pb.go  checksum.pb.go  executor.pb.go  expression.pb.go  metadata.pb.go  schema.pb.go  select.pb.go  trace.pb.go
proto/: analyze.proto  executor.proto  select.proto
